k8s/app/eduplay-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eduplay-gateway
  namespace: eduplay
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eduplay-gateway
  template:
    metadata:
      labels:
        app: eduplay-gateway
    spec:
      containers:
        - name: gateway
          image: cactus91869/eduplay-gateway:sha-<shortsha>
          ports:
            - containerPort: 35000
