k8s/app/eduplay-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eduplay-gateway
  namespace: eduplay
spec:
  selector:
    app: eduplay-gateway
  ports:
    - name: http
      port: 80
      targetPort: 35000
      protocol: TCP
  type: ClusterIP
